@@ -13,6 +13,10 @@ PHP                                                                        NEWS
   . Fixed bug #75671 (pg_version() crashes when called on a connection to
     cockroach). (magicaltux at gmail dot com)
 
+- SOAP:
+  . Fixed bug #70469 (SoapClient generates E_ERROR even if exceptions=1 is
+used). (Anton Artamonov)
+
 04 Jan 2018, PHP 7.1.13
 
 - Core:
